--- a/src/components/CategoryAdmin/CategoryAdmin.module.scss
+++ b/src/components/CategoryAdmin/CategoryAdmin.module.scss
@@ -87,7 +87,7 @@
     position: absolute;
     background: rgba(0, 0, 0, 0.8);
     width: 100%;
-    height: 100%;
+    height: 100vh;
     z-index: 1;
     top: 0;
     bottom: 0;
