--- a/src/components/CategoryAdmin/CategoryAdmin.module.scss
+++ b/src/components/CategoryAdmin/CategoryAdmin.module.scss
@@ -155,7 +155,7 @@
     width: 460px;
     padding: 12px 0 12px 26px;
     margin: 10px 0;
-    /* outline: none; */
+    outline: none;
     border-color: rgba(0, 0, 0, 12%);
     border-radius: 8px;
 }
