--- a/src/components/ViewBill/ViewBill.module.scss
+++ b/src/components/ViewBill/ViewBill.module.scss
@@ -37,7 +37,7 @@
             position: absolute;
             right: 0;
             top: 50%;
-            height: 20px;
+            height: 50%;
             transform: translateY(-50%);
             border-right: 1px solid rgba(0, 0, 0, 0.2);
         }
@@ -45,5 +45,20 @@
         &:nth-child(5)::after {
             border-right: none;
         }
+    }
+}
+
+.btn_back {
+    background-color: black;
+    color: white !important;
+    margin: 16px 30px;
+    border-radius: 40px;
+    transition: all 0.25s;
+    &:hover {
+        opacity: 0.8;
+    }
+
+    &:active {
+        transform: scale(0.95);
     }
 }
