--- a/src/components/DetailProduct/DetailProduct.module.scss
+++ b/src/components/DetailProduct/DetailProduct.module.scss
@@ -16,10 +16,16 @@
 
 // Info
 .info-heading {
-    margin-top: 10px;
+    margin: 10px 0;
     font-size: 2rem;
     font-weight: 400;
     text-transform: uppercase;
+}
+
+.brand {
+    font-size: 1.8rem;
+    text-transform: uppercase;
+    color: #ccc;
 }
 
 .info-money {
@@ -34,15 +40,6 @@
     overflow: hidden;
 }
 
-.info-quantity {
-    border-radius: 20px;
-    width: 60px;
-    padding: 8px;
-    text-align: center;
-    font-size: 1.6rem;
-    border: 2px solid var(--black);
-}
-
 .info-summary-content {
     padding-left: 8px;
     font-size: 1.2rem;
@@ -55,6 +52,7 @@
     background-color: black;
     border-radius: 20px;
     color: var(--white);
+    transition: all 0.25s;
     cursor: pointer;
 }
 
@@ -100,4 +98,58 @@
 .details_info-product {
     margin: 8px 0;
     font-size: 1.2rem;
+}
+
+.options {
+    display: flex;
+    height: 40px;
+    margin: 10px 0;
+    align-items: center;
+    .size {
+        line-height: 40px;
+
+        .size_heading {
+            font-size: 1.8rem;
+            font-weight: 400;
+        }
+        .size_option {
+            font-size: 1.5rem;
+
+            font-weight: 500;
+            text-align: center;
+            width: 70px;
+            margin: 0 8px;
+            outline: none;
+            border: none;
+            option:target {
+                border: none;
+            }
+        }
+    }
+    .info_quantity {
+        height: 40px;
+        background: #fff;
+        border-radius: 12px;
+        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+        align-items: center;
+        justify-content: space-between;
+        display: flex;
+        width: 100px;
+        margin-left: 16px;
+        .minus,
+        .plus,
+        .num {
+            width: 100%;
+            user-select: none;
+            text-align: center;
+            font-size: 1.6rem;
+            font-weight: 400;
+            cursor: pointer;
+        }
+        .num {
+            border-right: 2px solid rgba(0, 0, 0, 0.2);
+            border-left: 2px solid rgba(0, 0, 0, 0.2);
+            pointer-events: none;
+        }
+    }
 }
