--- a/src/components/Products/Products.module.scss
+++ b/src/components/Products/Products.module.scss
@@ -50,12 +50,15 @@
 
         .product-img {
             height: auto;
-            width: 50%;
+            width: 100%;
+            position: absolute;
+            top: 0;
         }
     }
 
     .content {
-        position: relative;
+        position: absolute;
+        bottom: 0;
         padding: 20px;
         display: flex;
         justify-content: center;
@@ -71,6 +74,7 @@
         }
 
         .price {
+            margin: 8px;
             font-size: 1.6rem;
             color: white;
             font-weight: 700;
