--- a/src/components/AdminManagers/AdminManagers.module.scss
+++ b/src/components/AdminManagers/AdminManagers.module.scss
@@ -1,15 +1,15 @@
 // Product
-.users-header {
+.managers-header {
     display: flex;
     justify-content: space-between;
     margin: 10px 20px 20px 20px;
 }
 
-.users-heading {
+.managers-heading {
     font-size: 1.8rem;
 }
 
-.users-create-btn {
+.managers-create-btn {
     width: 84px;
     padding: 10px 6px;
     border-radius: 10px;
@@ -18,7 +18,7 @@
     color: var(--white-color) !important;
 }
 
-.users-create-btn:hover {
+.managers-create-btn:hover {
     cursor: pointer;
     opacity: 0.8;
 }
@@ -71,8 +71,7 @@
     border-right: 1px solid rgba(0, 0, 0, 0.2);
 }
 
-.details-content-item:nth-child(9)::after,
-.details-content-item:nth-child(10)::after {
+.details-content-item:nth-child(9)::after {
     border-right: none;
 }
 
@@ -105,8 +104,8 @@
     display: none;
 
     .modal-detail {
-        width: 600px;
-        height: 350px;
+        width: 1200px;
+        height: 500px;
         background-color: #fff;
         border-radius: 20px;
 
@@ -132,9 +131,11 @@
             }
         }
 
-        .address-list {
+        .managers-list {
             font-size: 1.4rem;
             text-align: center;
+            display: flex;
+            justify-content: space-evenly;
             .info {
                 .input-label {
                     margin-left: 18px;
@@ -179,54 +180,4 @@
 .modal.open {
     display: flex;
 }
-
-// INPUT NHAN VIEN
-.details__account {
-    display: flex;
-    margin: 18px 0 0 100px;
-    border: none;
-}
-
-.input-list {
-    position: relative;
-}
-
-.input-label {
-    display: block;
-    margin-left: 18px;
-    font-size: 1.4rem;
-    padding: 0 8px;
-    background: white;
-    position: absolute;
-    color: var(--black1-color);
-}
-
-.input-item {
-    color: var(--black1-color);
-    font-size: 1.4rem;
-    width: 500px;
-    padding: 12px 0 12px 26px;
-    margin: 10px 10px 10px 10px;
-    outline: none;
-    border: 1px solid rgba(0, 0, 0, 0.12);
-    border-radius: 8px;
-}
-
-.input-user-create {
-    margin-top: 64px;
-}
-
-.save-btn {
-    padding: 10px 28px;
-    margin: 10px 60px 10px 0;
-    float: right;
-    border-radius: 20px;
-    border: none;
-    background-color: var(--blue-color);
-    color: var(--white-color);
-}
-
-.save-btn:hover {
-    opacity: 0.8;
-    cursor: pointer;
-}
+// modal
