--- a/src/components/CategoryAdmin/CategoryAdmin.module.scss
+++ b/src/components/CategoryAdmin/CategoryAdmin.module.scss
@@ -88,7 +88,7 @@
     position: absolute;
     background: rgba(0, 0, 0, 0.8);
     width: 100%;
-    height: 100vh;
+    height: 100%;
     z-index: 1;
     top: 0;
     bottom: 0;
@@ -156,8 +156,8 @@
     width: 460px;
     padding: 12px 0 12px 26px;
     margin: 10px 0;
-    outline: none;
-    border-color: rgba(0, 0, 0, 12%);
+    // border-color: rgba(0, 0, 0, 12%);
+    border: 1px solid #000;
     border-radius: 8px;
 }
 
