--- a/src/Layouts/components/Navbar/Navbar.module.scss
+++ b/src/Layouts/components/Navbar/Navbar.module.scss
@@ -1,6 +1,7 @@
 /* Navigation */
 .navbar {
     display: flex;
+    text-transform: uppercase;
     .navbar-item {
         margin: 0 8px;
         color: var(--text-nav-color);
