13/06 xu ly event

--- a/src/components/AdminProduct/AdminProduct.module.scss
+++ b/src/components/AdminProduct/AdminProduct.module.scss
@@ -82,7 +82,7 @@
 }
 
 .justify_item {
-    white-space: pre-line;
+    white-space: nowrap;
     text-overflow: ellipsis;
     text-align: justify !important;
 }
