--- a/src/pages/Profile/Profile.module.scss
+++ b/src/pages/Profile/Profile.module.scss
@@ -62,78 +62,86 @@
     }
 }
 
-.switch {
-    background-color: white;
-    width: 80px;
-    height: 20px;
-    position: absolute;
-    border-radius: 40px;
-    border: 1px solid #ccc;
-    cursor: pointer;
-    user-select: none;
-    display: inline-block;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-.switch::before,
-.switch::after {
-    content: '';
-    width: 2rem;
-    height: 2rem;
-    background-color: white;
-    position: absolute;
-    border-radius: 50%;
-    top: -10%;
-    left: -3%;
-    transition: all 350ms cubic-bezier(0, 0.95, 0.38, 0.98), background 150ms ease;
-    transform-origin: right center;
-}
-.switch::before {
-    border: 1px solid 33ccff;
-}
-.switch::after {
-    background: #ff99cc;
-    border: 1px solid #ff99cc;
-}
-.gender_check:checked + .switch:before {
-    background: #ff99cc;
-    transform: translateX(280%);
-    border: 1px solid #ff99cc;
-}
-.gender_check + .switch .female {
-    color: #ff99cc;
-}
-.gender_check:checked + .switch .male {
-    color: #33ccff;
-}
-.gender_check + .switch .male {
-    color: #ccc;
-}
-.gender_check:checked + .switch .female {
-    color: #ccc;
-}
-.gender_check:checked + .switch:after {
-    background: #33ccff;
-    transform: translateX(280%);
-    border: 1px solid #33ccff;
-}
-.female,
-.male {
-    position: absolute;
-    font-weight: lighter;
-    color: #ccc;
-}
-.female {
-    z-index: -1;
-    top: 30%;
-    transform: rotate(180deg);
-    font-size: 3rem;
-}
-.male {
-    z-index: -1;
-    left: 87%;
-    top: -145%;
-    font-size: 2.5rem;
-    transform: rotate(-50deg);
+// File Image
+.product_img {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    .img_item {
+        margin: 0 8px;
+
+        .file_upload {
+            height: 150px;
+            width: 150px;
+            border-radius: 50%;
+            position: relative;
+
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+            border: 3px solid rgb(157, 157, 157);
+            overflow: hidden;
+            background-size: 100% 200%;
+            transition: all 1s;
+            color: rgb(157, 157, 157);
+            font-size: 100px;
+
+            .img_box {
+                display: none;
+                width: 150px;
+                height: 150px;
+                .img {
+                    width: 100%;
+                    height: 100%;
+                    transition: all 0.5s;
+                }
+            }
+
+            .upload {
+                height: 200px;
+                width: 200px;
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+                opacity: 0;
+                cursor: pointer;
+            }
+
+            .fadeout {
+                display: none;
+            }
+
+            .fadein {
+                display: block;
+            }
+            &:hover {
+                background-position: 0 -100%;
+
+                color: black;
+                border-color: black;
+                .delete_box.active {
+                    display: flex;
+                }
+            }
+
+            .delete_box {
+                user-select: none;
+                display: none;
+                align-items: center;
+                justify-content: center;
+                top: 0;
+                right: 0;
+                bottom: 0;
+                left: 0;
+                background: rgba(0, 0, 0, 8%);
+                position: absolute;
+                z-index: 1;
+                .btn_delete {
+                    cursor: pointer;
+                }
+            }
+        }
+    }
 }
