--- a/src/layouts/components/DefaultAdmin/DefaultAdmin.module.scss
+++ b/src/layouts/components/DefaultAdmin/DefaultAdmin.module.scss
@@ -39,7 +39,41 @@
 
             &:nth-child(1) {
                 margin-bottom: 34px;
-                pointer-events: none;
+                background-color: var(--blue-color) !important;
+                &:hover {
+                    background-color: none;
+
+                    .nav-item-link {
+                        color: white;
+                        &::before {
+                            content: '';
+                            color: var(--blue-color);
+                            position: absolute;
+                            right: -12px;
+                            top: -48px;
+                            width: 50px;
+                            height: 50px;
+                            background: transparent;
+                            border-radius: 50%;
+                            box-shadow: 40px 40px 0 15px;
+                            pointer-events: none;
+                        }
+
+                        &::after {
+                            content: '';
+                            position: absolute;
+                            color: var(--blue-color);
+                            right: -12px;
+                            bottom: -48px;
+                            width: 50px;
+                            height: 50px;
+                            background: transparent;
+                            border-radius: 50%;
+                            box-shadow: 40px -40px 0 15px;
+                            pointer-events: none;
+                        }
+                    }
+                }
             }
 
             &:hover {
