--- a/src/Layouts/components/Search/Search.module.scss
+++ b/src/Layouts/components/Search/Search.module.scss
@@ -1,5 +1,6 @@
 .search {
     height: 40px;
+    position: relative;
     background: rgb(245, 243, 243);
     border-radius: 40px;
     display: flex;
@@ -51,7 +52,7 @@
 
 .clear {
     position: absolute;
-    right: calc(40px + 16px);
+    right: calc(40px + 10px);
     top: 50%;
     transform: translateY(-50%);
     color: rgba(22, 24, 35, 0.34);
