--- a/src/components/Dashboard/Dashboard.module.scss
+++ b/src/components/Dashboard/Dashboard.module.scss
@@ -7,46 +7,40 @@
     grid-template-columns: repeat(4, 1fr);
     grid-gap: 30px;
 }
-
 .card__box .card {
     position: relative;
     background: var(--white-color);
     padding: 30px;
+    padding: 16px;
     border-radius: 20px;
     display: flex;
     justify-content: space-between;
     cursor: pointer;
     box-shadow: 0 7px 25px rgba(0, 0, 0, 0.08);
 }
-
 .card__box .card:hover {
     background: var(--blue-color);
 }
-
 .card-numbers {
     position: relative;
     font-weight: 500;
     font-size: 2.5rem;
     color: var(--blue-color);
 }
-
 .card-name {
     color: var(--black2-color);
     font-size: 1.4rem;
     margin-top: 5px;
 }
-
 .card-icon {
     font-size: 3.5rem;
     color: var(--black2-color);
 }
-
 .card:hover .card-numbers,
 .card:hover .card-name,
 .card:hover .card-icon {
     color: var(--white-color);
 }
-
 /* CSS details */
 .details {
     position: relative;
@@ -59,7 +53,6 @@
 
 .details-orders {
     position: relative;
-    display: grid;
     min-height: 400px;
     background: var(--white-color);
     padding: 20px;
@@ -67,24 +60,20 @@
     border-radius: 20px;
     font-size: 1.4rem;
 }
-
 .details-table {
     width: 100%;
     border-collapse: collapse;
     margin-top: 10px;
 }
-
 .details-header {
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
 }
-
 .details-header-heading {
     font-weight: 600;
     color: var(--blue-color);
 }
-
 .details-header-btn {
     position: relative;
     padding: 5px 10px;
@@ -93,7 +82,6 @@
     color: var(--white-color);
     border-radius: 6px;
 }
-
 .details-table-thead .details-table-thead-list {
     font-weight: 600;
 }
@@ -102,28 +90,22 @@
     color: var(--black1-color);
     border-top: 1px solid rgba(0, 0, 0, 0.1);
 }
-
 .details-table .details-table-tbody tr:hover {
     background: var(--blue-color);
     color: var(--white-color);
 }
-
 .details-table tr td {
     padding: 10px;
 }
-
 .details-table tr td:last-child {
     text-align: end;
 }
-
 .details-table tr td:nth-child(2) {
     text-align: center;
 }
-
 .details-table tr td:nth-child(3) {
     text-align: center;
 }
-
 .status.delivered {
     padding: 2px 4px;
     background: #8de02c;
@@ -132,7 +114,6 @@
     font-size: 1.4rem;
     font-weight: 500;
 }
-
 .status.pending {
     padding: 2px 4px;
     background: #f9ca3f;
@@ -141,7 +122,6 @@
     font-size: 1.4rem;
     font-weight: 500;
 }
-
 .status.return {
     padding: 2px 4px;
     background: #f00;
@@ -150,7 +130,6 @@
     font-size: 1.4rem;
     font-weight: 500;
 }
-
 .status.ingrogress {
     padding: 2px 4px;
     background: #1795ce;
@@ -162,14 +141,12 @@
 
 .recent__customers {
     position: relative;
-    display: grid;
     min-height: 500px;
     padding: 20px;
     background: var(--white-color);
     box-shadow: 0 7px 25px rgba(0, 0, 0, 0.08);
     border-radius: 20px;
 }
-
 .recent__customers .customers-img {
     position: relative;
     width: 40px;
@@ -177,7 +154,6 @@
     border-radius: 50%;
     overflow: hidden;
 }
-
 .recent__customers .customers-img img {
     position: absolute;
     top: 0;
@@ -186,11 +162,9 @@
     height: 100%;
     object-fit: cover;
 }
-
 .recent__customers .recent__customers-table tr td {
     padding: 12px 10px;
 }
-
 .recent__customers .recent__customers-table tr td h4 {
     font-size: 1.4rem;
     font-weight: 500;
@@ -204,7 +178,6 @@
     background: var(--blue-color);
     color: var(--white-color);
 }
-
 .recent__customers .recent__customers-table tr:hover td h4 span {
     color: var(--white-color);
 }
