--- a/src/components/AddProduct/AddProduct.module.scss
+++ b/src/components/AddProduct/AddProduct.module.scss
@@ -91,7 +91,7 @@
             justify-content: space-between;
             width: calc(90% / 2);
             .description_item {
-                width: 100%;
+                min-width: 100%;
                 margin: 0 40px 30px 30px;
 
                 .item_heading {
