--- a/src/components/AdminProduct/AdminProduct.module.scss
+++ b/src/components/AdminProduct/AdminProduct.module.scss
@@ -2,7 +2,7 @@
 .account-header {
     display: flex;
     justify-content: space-between;
-    margin: 0 28px 10px 0;
+    margin: 20px 28px 20px 18px;
 }
 
 .account-heading {
@@ -45,12 +45,16 @@
 
 .details-content-item {
     position: relative;
-    padding: 2px 8px;
-    text-align: center;
+    padding: 2px 10px;
     overflow: hidden;
     max-width: 100px;
     min-width: 20px;
+    text-align: center;
     color: var(--black1-color);
+    .details-content-item-img {
+        width: 100px;
+        height: 100px;
+    }
 }
 
 .details-content-item::after {
@@ -63,8 +67,8 @@
     border-right: 1px solid rgba(0, 0, 0, 0.2);
 }
 
-.details-content-item:nth-child(6)::after,
-.details-content-item:nth-child(7)::after {
+.details-content-item:nth-child(9)::after,
+.details-content-item:nth-child(10)::after {
     border-right: none;
 }
 
@@ -84,5 +88,5 @@
 .justify_item {
     white-space: nowrap;
     text-overflow: ellipsis;
-    text-align: justify !important;
+    // text-align: justify !important;
 }
