--- a/src/components/CategoryAdmin/CategoryAdmin.module.scss
+++ b/src/components/CategoryAdmin/CategoryAdmin.module.scss
@@ -54,6 +54,10 @@
     padding: 2px 10px;
     text-align: center;
     color: var(--black1-color);
+    .details-content-item-img {
+        width: 100px;
+        height: 100px;
+    }
 }
 
 .details-content-item::after {
@@ -66,8 +70,8 @@
     border-right: 1px solid rgba(0, 0, 0, 0.2);
 }
 
-.details-content-item:nth-child(4)::after,
-.details-content-item:nth-child(5)::after {
+.details-content-item:nth-child(5)::after,
+.details-content-item:nth-child(6)::after {
     border-right: none;
 }
 
@@ -184,4 +188,88 @@
 .btn:hover {
     cursor: pointer;
     opacity: 0.9;
+}
+
+// File Image
+.product_img {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    .img_item {
+        margin: 8px 8px;
+
+        .file_upload {
+            height: 150px;
+            width: 150px;
+            border-radius: 50%;
+            position: relative;
+
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+            border: 3px solid rgb(157, 157, 157);
+            overflow: hidden;
+            background-size: 100% 200%;
+            transition: all 1s;
+            color: rgb(157, 157, 157);
+            font-size: 100px;
+
+            .img_box {
+                display: none;
+                width: 150px;
+                height: 150px;
+                .img {
+                    width: 100%;
+                    height: 100%;
+                    transition: all 0.5s;
+                }
+            }
+
+            .upload {
+                height: 150px;
+                width: 150px;
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+                opacity: 0;
+                cursor: pointer;
+            }
+
+            .fadeout {
+                display: none;
+            }
+
+            .fadein {
+                display: block;
+            }
+            &:hover {
+                background-position: 0 -100%;
+
+                color: black;
+                border-color: black;
+                .delete_box.active {
+                    display: flex;
+                }
+            }
+
+            .delete_box {
+                user-select: none;
+                display: none;
+                align-items: center;
+                justify-content: center;
+                top: 0;
+                right: 0;
+                bottom: 0;
+                left: 0;
+                background: rgba(0, 0, 0, 8%);
+                position: absolute;
+                z-index: 1;
+                .btn_delete {
+                    cursor: pointer;
+                }
+            }
+        }
+    }
 }
