--- a/src/components/AdminManagers/AdminManagers.module.scss
+++ b/src/components/AdminManagers/AdminManagers.module.scss
@@ -45,7 +45,7 @@
 
 .details-content-item {
     position: relative;
-    padding: 2px 0;
+    padding: 4px 8px;
     text-align: center;
     color: var(--black1-color);
     .details-content-select {
