--- a/src/components/AddProduct/AddProduct.module.scss
+++ b/src/components/AddProduct/AddProduct.module.scss
@@ -265,7 +265,8 @@
 
 .option .logo_brand {
     position: absolute;
-    left: 14px;
+    left: 10px;
+    width: 25px;
     padding: 0;
     display: none;
 }
