17/06 20:26 có thể báo cáo

--- a/src/components/SignIn/SignIn.module.scss
+++ b/src/components/SignIn/SignIn.module.scss
@@ -87,6 +87,9 @@
             &:active {
                 transform: scale(0.95);
             }
+            &:hover {
+                cursor: pointer;
+            }
         }
 
         .sign_in {
